Added artwork template

--- a/w3_d1_2_apis_continued/spotify_app/index.html
+++ b/w3_d1_2_apis_continued/spotify_app/index.html
@@ -53,6 +53,7 @@
       <p> <%= songName %></p>
         <p> <%= artist %> </p>
         <p> <%= album %> </p>
+        <img src="<%= artWork %>">
       
     
 
